# deepdive

./: .gitignore  PROJECT_BRIEF.md  README.md  pyproject.toml
agent_core/: types.py
agent_core/apps/: __init__.py
agent_core/apps/deepdive/: __init__.py  prompt.py  report.py  runner.py  (+1 more)
agent_core/cli/: __init__.py  deepdive_ui.py  live.py  trace.py
agent_core/context/: __init__.py  manager.py
agent_core/mcp/: __init__.py  client.py  manager.py  tool.py
agent_core/observability/: __init__.py  exporter.py  logging.py  pricing.py  tracing.py
agent_core/persistence/: __init__.py  session_store.py
agent_core/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  factory.py  openai_provider.py
agent_core/runtime/: dispatcher.py  events.py  loop.py  reconstruct.py
agent_core/testing/: __init__.py  fake_provider.py
agent_core/tools/: base.py  registry.py
docs/adr/: 001-why-custom-provider-abstraction.md  002-why-not-langgraph.md  003-why-not-langgraph.md  005-tool-permission-model-and-concurrent-dispatch.md  006-mcp-integration-as-client-only.md  007-context-compression-strategy.md  008-session-persistence-design.md  010-observability-architecture.md  011-demo-agent-and-streaming-integration.md  README.md
docs/blog/: 2026-05-06-five-lessons-from-building-agent-runtime.md
docs/resume/: chinese-snippets.md
tests/: test_types.py
tests/cli/: test_trace_cli.py
tests/context/: test_manager.py
tests/mcp/: test_mcp.py
tests/observability/: test_exporter.py  test_logging.py  test_pricing.py  test_tracing.py
tests/persistence/: test_session_store.py
tests/providers/: test_anthropic.py  test_deepseek.py  test_openai.py
tests/runtime/: test_dispatcher.py  test_loop.py  test_reconstruct.py
tests/tools/: test_builtins.py
(+6 files in other folders)
