[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.1.0"
description = "Project scaffold for agent-core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.50",
    "anthropic>=0.40",
    "mcp",
    "httpx",
    "python-dotenv",
    "structlog",
    "aiosqlite>=0.22.1",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
agent-core = "agent_core.cli.trace:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
